# trinity-agi

./: -OutputJson  .agi_work_state.json  .copilot_safety.json  .env  .env_credentials.example  .gitignore  .pre-commit-config.yaml  .vscodeignore  ADAPTIVE_GLYMPHATIC_CLI_COMPLETE.md  ADAPTIVE_GLYMPHATIC_PRODUCTION_READY.md  ADAPTIVE_GLYMPHATIC_SYSTEM_COMPLETE.md  ADAPTIVE_GLYMPHATIC_SYSTEM_COMPLETE_old.md  ADAPTIVE_RHYTHM_AUTONOMOUS_GOAL_SYSTEM_COMPLETE.md  ADAPTIVE_RHYTHM_ORCHESTRATOR_COMPLETE.md  ADHD_AS_SUPERPOWER_FLOW_OBSERVER.md  ADHD_RECOGNITION_INTEGRATION_COMPLETE.md  ADMIN_RIGHTS_REQUIRED.md  AGENTS.md  AGI_AUTONOMOUS_RECOVERY_COMPLETE_20251106.md  AGI_CHAT_README.txt  AGI_GAPS_RESOLUTION_SUMMARY.md  AGI_LIFE_CONTINUITY_COMPLETE.md  AGI_OPTIMIZATION_COMPLETE.md  AGI_SELF_AWARE_CONTEXT_MANAGER.md  AGI_SYSTEM_GAPS_DIAGNOSTIC_REPORT.md  AGI_UNIVERSAL_ROADMAP.md  AI_AUTONOMOUS_OPS_COMPLETION.md  AI_HUMAN_COLLABORATION_WORKFLOW.md  AI_REST_INFORMATION_THEORY.md  AI_SELF_MANAGING_SUCCESS_REPORT.md  AMYGDALA_MPFC_INTEGRATION_COMPLETE.md  ANALYSIS_COMPLETE_REPORT.md  ARCHITECTURE_OVERVIEW.md  AUTOMATION_COMPLETE.md  AUTONOMOUS_FEEDBACK_SYSTEM_COMPLETE.md  AUTONOMOUS_GOAL_SYSTEM_OPERATIONAL.md  AUTONOMOUS_GOAL_SYSTEM_PHASE3_COMPLETE.md  AUTONOMOUS_GOAL_SYSTEM_ROADMAP.md  AUTONOMOUS_SELF_CARE_FEEDBACK_COMPLETE.md  AUTOPOIETIC_TRINITY_INTEGRATION_COMPLETE.md  (+345 more)
LLM_Unified/ion-mentoring/: .deploy-trigger  .env.example  .env.slack.example  .gitignore  .pre-commit-config.yaml  AUTOMATION_GUIDE.md  CHANGELOG.md  CI_CD_GUIDE.md  DAY1_ENVIRONMENT_SETUP.md  DAY2_ARCHITECTURE_AND_DESIGN.md  DAY2_DOCKER_CONTAINERIZATION.md  DAY3_CLOUD_RUN_DEPLOYMENT.md  DAY3_RESONANCE_IMPLEMENTATION.md  DAY4_PERSONA_ROUTING.md  DAY4_PRODUCTION_FEATURES.md  DAY5_CICD_PIPELINE.md  DAY5_MULTI_PERSONA_INTEGRATION.md  DAY5_PREVIEW.md  DELIVERY_PACKAGE.md  DEPLOYMENT.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  Dockerfile  E2E_TEST_GUIDE.md  FINAL_PROJECT_SUMMARY.md  GITCO_NATURAL_CHAT.md  LOAD_TESTING.md  LOGGING.md  MONITORING_GUIDE.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_ANALYSIS.md  PHASE1_3_ARCHITECTURE.md  PHASE1_3_FINAL_DEPLOYMENT_READY.md  PHASE1_3_VALIDATION_REPORT.md  PHASE4_DEPLOYMENT_READINESS_CHECK.md  PHASE4_배포_실패_Post-Mortem_가이드_2025-10-21.md  PHASE4_배포_실패_대비_가이드_2025-10-21.md  PHASE4_배포_준비_최종_체크_2025-10-21.md  POST_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_CHECKLIST.md  (+96 more)
LLM_Unified/ion-mentoring/app/: _compat_settings.py  config.py  dependencies.py  logging_setup.py  main.py
LLM_Unified/ion-mentoring/config/: base.yaml  dev.yaml  prod.yaml  test.yaml
LLM_Unified/ion-mentoring/demos/: complete_deployment_demo.py
LLM_Unified/ion-mentoring/docs/: API_VERSIONING_STRATEGY.md  ARCHITECTURE.md  BACKUP_AND_RECOVERY.md  CACHING_OPTIMIZATION.md  CI_CD_Setup_Guide.md  CORS_SECURITY_HARDENING.md  DEVELOPER_ONBOARDING.md  DISASTER_RECOVERY_PLAN.md  GCP_Load_Balancer_설계.md  GITCO_ORCHESTRATION_HANDOFF.md  GITHUB_ACTIONS_MANUAL_RUN.md  GRAFANA_MONITORING_SETUP.md  INDEX.md  LOAD_TESTING_CI.md  MONITORING_AND_ALERTS.md  MULTI_REGION_DEPLOYMENT.md  PERSONA_REFACTORING_MIGRATION_GUIDE.md  PERSONA_REFACTORING_ROADMAP.md  PERSONA_REFACTORING_WEEK1-4_COMPLETE.md  PERSONA_REFACTORING_WEEK5-6_COMPLETION.md  PHASE3_EXECUTIVE_SUMMARY.md  PHASE3_EXECUTIVE_SUMMARY_KO.md  PHASE4_CANARY_DEPLOYMENT.md  PHASE4_DEPLOYMENT_OPERATIONS_GUIDE.md  PHASE4_DEPLOYMENT_READINESS.md  PHASE_12_SLACK_BOT.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_WEEK5-6_UPDATE.md  PHASE_3_WEEK7-8_FINAL_STATUS.md  PRECOMMIT_HOOKS_SETUP.md  PROJECT_COMPLETION_OVERVIEW.md  PROJECT_FINAL_STATUS_2025-10-18.md  QUICK_START_LLM_SUMMARY.md  SECRET_MANAGER_SETUP.md  SECURITY_TESTING_GUIDE.md  SENTRY_ERROR_TRACKING.md  SLA_AND_MONITORING.md  Stage_2_5_상세_계획.md  (+22 more)
LLM_Unified/ion-mentoring/examples/: README.md  resonance_demo.py  routing_demo.py
LLM_Unified/ion-mentoring/gateway/: INTEGRATION_GUIDE.md  MONITORING_STACK_DEPLOYMENT.md  README.md  gateway_activation.yaml  grafana_dashboard.json
LLM_Unified/ion-mentoring/monitor/: cache_dashboard.py  start_dashboard.ps1  test_cache_integration.py  test_e2e_production.py  test_hybrid_summarizer.py  test_llm_summary.py  test_pipeline_integration.py  test_storage_integration.py
LLM_Unified/ion-mentoring/monitoring/: PHASE4_CANARY_DASHBOARD_SETUP.md  README.md  README_ALERT_POLICIES.md  README_DAILY_REPORTS.md  README_LOG_ANALYSIS.md  README_MONITORING.md  analyze_error_patterns.py  create_alert_policies.ps1  create_alert_policies.py  create_simple_dashboard.ps1  daily_operations_report.py  dashboard.json  ion_api_uptime_check.json  ion_dashboard_backup.json  lumen_cache_dashboard.json  lumen_env_vars.txt  lumen_gateway_uptime_check.json  phase4_canary_dashboard.json  phase4_canary_dashboard.json.fixed  production_monitoring_dashboard.json  setup_log_analysis.py  simple_dashboard.json  test_daily_report.json  test_daily_report.md
LLM_Unified/ion-mentoring/orchestrator/: intent_router.py
LLM_Unified/ion-mentoring/persona_system/: __init__.py  base.py  caching.py  legacy.py  models.py  personas.py  pipeline.py  pipeline_optimized.py
LLM_Unified/ion-mentoring/samples/: chat_responses_sample.jsonl
LLM_Unified/ion-mentoring/scripts/: __init__.py  analyze_cache_performance.ps1  analyze_chat_metadata.py  attach_alert_channels.ps1  auto_canary_runner.ps1  auto_continue_deployment.ps1  auto_planner.ps1  auto_remediation.ps1  balanced_warmup.ps1  canary_env.env  check_bot_status.ps1  check_monitoring_status.ps1  cleanup_old_bot_logs.ps1  cleanup_old_logs.ps1  collect_summary_metrics.ps1  compare_after_rollback.json  compare_canary_vs_legacy.ps1  compare_slo_snapshot.ps1  deploy_lumen_gateway.ps1  deploy_phase4_canary.ps1  deploy_redis_caching_canary.ps1  disable_github_workflows.ps1  emergency_rollback.ps1  filter_logs_by_time.ps1  fix_github_actions_iam.ps1  fix_github_actions_iam.sh  fix_secret_manager_iam.ps1  generate_daily_report.ps1  get_canary_metrics.ps1  list_slack_channels.ps1  monitor_bot_health.ps1  (+48 more)
(+7815 files in other folders)
